# ni-fpga-interface

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: architecture.md  cross_compiling.md
examples/fpga_c_interface/: NiFpga_Main.c  NiFpga_Main.h  NiFpga_Main.lvbitx
examples/fpga_project/: Example FPGA Project.lvproj  FPGA Main.vi  Point Cluster.ctl  Test As RIO Server.vi
examples/fpga_project/FPGA Bitfiles/: examplefpgaproje_FPGATarget_FPGAMain_u8-CWS6Ina0.lvbitx
examples/host_example/: Cargo.toml  build.rs
examples/host_example/examples/: dmas_basic.rs  dmas_control.rs  dmas_zero_copy.rs  irqs.rs  multithreaded.rs  registers.rs
examples/host_example/src/: lib.rs  main.rs
ni-fpga-interface/: Cargo.toml
ni-fpga-interface-build/: Cargo.toml
ni-fpga-interface-build/src/: address_definitions.rs  address_definitions_visitor.rs  bindings_parser.rs  custom_type_register_visitor.rs  lib.rs  register_definitions.rs  register_definitions_visitor.rs  registers_generator.rs
ni-fpga-interface/src/: error.rs  fifos.rs  irq.rs  lib.rs  nifpga_sys.rs  registers.rs  session.rs  types.rs
ni-fpga-interface/src/registers/: mod.rs  native_types.rs
ni-fpga-interface/src/session/: data_interfaces.rs  fifo_control.rs  mod.rs
src/: build.rs  error.rs  lib.rs  registers.rs  session.rs
