[package]
name = "ni-fpga-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
paste = "1.0"
libc = "0.2"
syn = { version = "2.0", features = ["visit", "parsing"] }
quote = "1.0"
prettyplease = "0.2"
lang-c = "0.15"
