[workspace]

members = ["ni-fpga-interface", "examples/host_example"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["James McNally <james@wiresmithtech.com>"]
description = "Provide the ability to access an NI FPGA application from Rust"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/WiresmithTech/ni-fpga-interface"
