[workspace]
resolver = "2"
members = ["ni-fpga-interface", "ni-fpga-interface-build", "examples/host_example"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["James McNally <james@wiresmithtech.com>"]
description = "Provide the ability to access an NI FPGA application from Rust"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/WiresmithTech/ni-fpga-interface"
