[package]
name = "ni-fpga-interface-build"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
libc = "0.2"
syn = { version = "2.0", features = ["visit", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
lang-c = "0.15"
