[package]
name = "ni-fpga-interface"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
libc = "0.2"
thiserror = "2"


[lib]
# Cant run doc tests as we depend on the linked libraries from the builder.
doctest = false