[package]
name = "host_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ni-fpga-interface = { path = "../../ni-fpga-interface"}

[build-dependencies]
ni-fpga-interface = { path = "../../ni-fpga-interface"}